# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Override for angle_root
angle_root = "//Source/ThirdParty/ANGLE"

# True if ANGLE can access build/, testing/ and other Chrome folders.
angle_has_build = false

# Bunch of features ANGLE's build files test for that we never set.
is_cfi = false
is_chromeos = false
