jsc_inspector_domains = [
  "inspector/protocol/Animation.json",
  "inspector/protocol/ApplicationCache.json",
  "inspector/protocol/Audit.json",
  "inspector/protocol/Browser.json",
  "inspector/protocol/CPUProfiler.json",
  "inspector/protocol/CSS.json",
  "inspector/protocol/Canvas.json",
  "inspector/protocol/Console.json",
  "inspector/protocol/DOM.json",
  "inspector/protocol/DOMDebugger.json",
  "inspector/protocol/DOMStorage.json",
  "inspector/protocol/Database.json",
  "inspector/protocol/Debugger.json",
  "inspector/protocol/GenericTypes.json",
  "inspector/protocol/Heap.json",
  "inspector/protocol/IndexedDB.json",
  "inspector/protocol/Inspector.json",
  "inspector/protocol/LayerTree.json",
  "inspector/protocol/Memory.json",
  "inspector/protocol/Network.json",
  "inspector/protocol/Page.json",
  "inspector/protocol/Recording.json",
  "inspector/protocol/Runtime.json",
  "inspector/protocol/ScriptProfiler.json",
  "inspector/protocol/Security.json",
  "inspector/protocol/ServiceWorker.json",
  "inspector/protocol/Target.json",
  "inspector/protocol/Timeline.json",
  "inspector/protocol/Worker.json",
]

jsc_inspector_protocol_scripts = [
  "inspector/scripts/generate-inspector-protocol-bindings.py",
  "inspector/scripts/codegen/cpp_generator.py",
  "inspector/scripts/codegen/cpp_generator_templates.py",
  "inspector/scripts/codegen/generate_js_backend_commands.py",
  "inspector/scripts/codegen/generate_cpp_backend_dispatcher_header.py",
  "inspector/scripts/codegen/generate_cpp_backend_dispatcher_implementation.py",
  "inspector/scripts/codegen/generate_cpp_frontend_dispatcher_header.py",
  "inspector/scripts/codegen/generate_cpp_frontend_dispatcher_implementation.py",
  "inspector/scripts/codegen/generate_cpp_protocol_types_header.py",
  "inspector/scripts/codegen/generate_cpp_protocol_types_implementation.py",
  "inspector/scripts/codegen/generator.py",
  "inspector/scripts/codegen/generator_templates.py",
  "inspector/scripts/codegen/__init__.py",
  "inspector/scripts/codegen/models.py",
]
