declare_args() {
  use_inspector_socket_server = false
}

builtin_sources = [
  "builtins/ArrayConstructor.js",
  "builtins/ArrayIteratorPrototype.js",
  "builtins/ArrayPrototype.js",
  "builtins/AsyncFromSyncIteratorPrototype.js",
  "builtins/AsyncFunctionPrototype.js",
  "builtins/AsyncGeneratorPrototype.js",
  "builtins/AsyncIteratorPrototype.js",
  "builtins/FunctionPrototype.js",
  "builtins/GeneratorPrototype.js",
  "builtins/GlobalObject.js",
  "builtins/GlobalOperations.js",
  "builtins/InternalPromiseConstructor.js",
  "builtins/IteratorHelpers.js",
  "builtins/IteratorPrototype.js",
  "builtins/MapConstructor.js",
  "builtins/MapIteratorPrototype.js",
  "builtins/MapPrototype.js",
  "builtins/ModuleLoader.js",
  "builtins/NumberConstructor.js",
  "builtins/ObjectConstructor.js",
  "builtins/PromiseConstructor.js",
  "builtins/PromiseOperations.js",
  "builtins/PromisePrototype.js",
  "builtins/ProxyHelpers.js",
  "builtins/ReflectObject.js",
  "builtins/RegExpPrototype.js",
  "builtins/RegExpStringIteratorPrototype.js",
  "builtins/SetIteratorPrototype.js",
  "builtins/SetPrototype.js",
  "builtins/ShadowRealmPrototype.js",
  "builtins/StringConstructor.js",
  "builtins/StringIteratorPrototype.js",
  "builtins/StringPrototype.js",
  "builtins/TypedArrayConstructor.js",
  "builtins/TypedArrayPrototype.js",
  "builtins/WebAssembly.js",
  "inspector/InjectedScriptSource.js",
]

wasm_ops_h = "$root_gen_dir/JavaScriptCore/WasmOps.h"

jsc_public_framework_headers = [
  "API/JSBase.h",
  "API/JSContextRef.h",
  "API/JSObjectRef.h",
  "API/JSStringRef.h",
  "API/JSTypedArray.h",
  "API/JSValueRef.h",
  "API/JavaScript.h",
  "API/WebKitAvailability.h",
]

jsc_private_framework_headers = [
  "API/APICallbackFunction.h",
  "API/APICast.h",
  "API/APIUtils.h",
  "API/JSAPIValueWrapper.h",
  "API/JSAPIWrapperObject.h",
  "API/JSBasePrivate.h",
  "API/JSCTestRunnerUtils.h",
  "API/JSCallbackConstructor.h",
  "API/JSCallbackFunction.h",
  "API/JSCallbackObject.h",
  "API/JSCallbackObjectFunctions.h",
  "API/JSClassRef.h",
  "API/JSContextInternal.h",
  "API/JSContextPrivate.h",
  "API/JSContextRefInspectorSupport.h",
  "API/JSContextRefInternal.h",
  "API/JSContextRefPrivate.h",
  "API/JSHeapFinalizerPrivate.h",
  "API/JSManagedValueInternal.h",
  "API/JSMarkingConstraintPrivate.h",
  "API/JSObjectRefPrivate.h",
  "API/JSRemoteInspector.h",
  "API/JSRetainPtr.h",
  "API/JSScriptRefPrivate.h",
  "API/JSStringRefPrivate.h",
  "API/JSValueInternal.h",
  "API/JSValuePrivate.h",
  "API/JSVirtualMachineInternal.h",
  "API/JSWeakObjectMapRefInternal.h",
  "API/JSWeakObjectMapRefPrivate.h",
  "API/JSWeakPrivate.h",
  "API/JSWrapperMap.h",
  "API/ObjCCallbackFunction.h",
  "API/ObjcRuntimeExtras.h",
  "API/OpaqueJSString.h",
  "assembler/ARM64Assembler.h",
  "assembler/ARM64Registers.h",
  "assembler/ARMv7Assembler.h",
  "assembler/ARMv7Registers.h",
  "assembler/AbortReason.h",
  "assembler/AbstractMacroAssembler.h",
  "assembler/AssemblerBuffer.h",
  "assembler/AssemblerCommon.h",
  "assembler/AssemblyComments.h",
  "assembler/CPU.h",
  "assembler/CPUInlines.h",
  "assembler/CodeLocation.h",
  "assembler/FastJITPermissions.h",
  "assembler/JITOperationList.h",
  "assembler/JITOperationValidation.h",
  "assembler/LinkBuffer.h",
  "assembler/MacroAssembler.h",
  "assembler/MacroAssemblerARM64.h",
  "assembler/MacroAssemblerARMv7.h",
  "assembler/MacroAssemblerCodeRef.h",
  "assembler/MacroAssemblerHelpers.h",
  "assembler/MacroAssemblerRISCV64.h",
  "assembler/MacroAssemblerX86Common.h",
  "assembler/MacroAssemblerX86_64.h",
  "assembler/OSCheck.h",
  "assembler/Printer.h",
  "assembler/RISCV64Assembler.h",
  "assembler/RISCV64Registers.h",
  "assembler/RegisterInfo.h",
  "assembler/SecureARM64EHashPins.h",
  "assembler/SecureARM64EHashPinsInlines.h",
  "assembler/X86Assembler.h",
  "assembler/X86_64Registers.h",
  "b3/B3Common.h",
  "b3/B3Type.h",
  "b3/B3ValueRep.h",
  "builtins/BuiltinNames.h",
  "builtins/BuiltinUtils.h",
  "bytecode/ArithProfile.h",
  "bytecode/ArrayAllocationProfile.h",
  "bytecode/ArrayProfile.h",
  "bytecode/BytecodeConventions.h",
  "bytecode/BytecodeIndex.h",
  "bytecode/BytecodeIntrinsicRegistry.h",
  "bytecode/CallEdge.h",
  "bytecode/CallLinkInfo.h",
  "bytecode/CallLinkInfoBase.h",
  "bytecode/CallMode.h",
  "bytecode/CallVariant.h",
  "bytecode/CallVariantInlines.h",
  "bytecode/ChainedWatchpoint.h",
  "bytecode/CheckPrivateBrandStatus.h",
  "bytecode/CheckPrivateBrandVariant.h",
  "bytecode/CodeBlock.h",
  "bytecode/CodeBlockHash.h",
  "bytecode/CodeOrigin.h",
  "bytecode/CodeType.h",
  "bytecode/DFGExitProfile.h",
  "bytecode/DataFormat.h",
  "bytecode/DirectEvalCodeCache.h",
  "bytecode/ExecutableInfo.h",
  "bytecode/ExecutionCounter.h",
  "bytecode/ExitKind.h",
  "bytecode/ExitingInlineKind.h",
  "bytecode/ExitingJITType.h",
  "bytecode/ExpressionInfo.h",
  "bytecode/ExpressionInfoInlines.h",
  "bytecode/HandlerInfo.h",
  "bytecode/ICStatusMap.h",
  "bytecode/InlineCallFrame.h",
  "bytecode/Instruction.h",
  "bytecode/InstructionStream.h",
  "bytecode/InternalFunctionAllocationProfile.h",
  "bytecode/IterationModeMetadata.h",
  "bytecode/JumpTable.h",
  "bytecode/LLIntPrototypeLoadAdaptiveStructureWatchpoint.h",
  "bytecode/LazyOperandValueProfile.h",
  "bytecode/LazyValueProfile.h",
  "bytecode/LineColumn.h",
  "bytecode/LinkTimeConstant.h",
  "bytecode/MetadataTable.h",
  "bytecode/ObjectAllocationProfile.h",
  "bytecode/ObjectPropertyCondition.h",
  "bytecode/Opcode.h",
  "bytecode/OpcodeSize.h",
  "bytecode/Operands.h",
  "bytecode/PropertyCondition.h",
  "bytecode/PutByIdFlags.h",
  "bytecode/SetPrivateBrandStatus.h",
  "bytecode/SetPrivateBrandVariant.h",
  "bytecode/SourceID.h",
  "bytecode/SpeculatedType.h",
  "bytecode/StructureSet.h",
  "bytecode/SuperSampler.h",
  "bytecode/ToThisStatus.h",
  "bytecode/TypeLocation.h",
  "bytecode/UnlinkedCodeBlock.h",
  "bytecode/UnlinkedEvalCodeBlock.h",
  "bytecode/UnlinkedFunctionExecutable.h",
  "bytecode/UnlinkedGlobalCodeBlock.h",
  "bytecode/UnlinkedMetadataTable.h",
  "bytecode/ValueProfile.h",
  "bytecode/ValueRecovery.h",
  "bytecode/VariableWriteFireDetail.h",
  "bytecode/VirtualRegister.h",
  "bytecode/Watchpoint.h",
  "debugger/Breakpoint.h",
  "debugger/Debugger.h",
  "debugger/DebuggerCallFrame.h",
  "debugger/DebuggerParseData.h",
  "debugger/DebuggerPrimitives.h",
  "dfg/DFGCodeOriginPool.h",
  "dfg/DFGCommon.h",
  "dfg/DFGDoesGCCheck.h",
  "dfg/DFGMinifiedID.h",
  "domjit/DOMJITAbstractHeap.h",
  "domjit/DOMJITCallDOMGetterSnippet.h",
  "domjit/DOMJITEffect.h",
  "domjit/DOMJITGetterSetter.h",
  "domjit/DOMJITHeapRange.h",
  "domjit/DOMJITSignature.h",
  "heap/AbstractSlotVisitor.h",
  "heap/AbstractSlotVisitorInlines.h",
  "heap/AlignedMemoryAllocator.h",
  "heap/AllocationFailureMode.h",
  "heap/Allocator.h",
  "heap/AllocatorInlines.h",
  "heap/AllocatorForMode.h",
  "heap/BlockDirectory.h",
  "heap/BlockDirectoryBits.h",
  "heap/BlockDirectoryInlines.h",
  "heap/CellAttributes.h",
  "heap/CellContainer.h",
  "heap/CellContainerInlines.h",
  "heap/CellState.h",
  "heap/CollectionScope.h",
  "heap/CollectorPhase.h",
  "heap/CompleteSubspace.h",
  "heap/CompleteSubspaceInlines.h",
  "heap/ConstraintConcurrency.h",
  "heap/ConstraintParallelism.h",
  "heap/ConstraintVolatility.h",
  "heap/DeferGC.h",
  "heap/DeferGCInlines.h",
  "heap/DeleteAllCodeEffort.h",
  "heap/DestructionMode.h",
  "heap/EdenGCActivityCallback.h",
  "heap/FastMallocAlignedMemoryAllocator.h",
  "heap/FreeList.h",
  "heap/FreeListInlines.h",
  "heap/FullGCActivityCallback.h",
  "heap/GCActivityCallback.h",
  "heap/GCAssertions.h",
  "heap/GCConductor.h",
  "heap/GCDeferralContext.h",
  "heap/GCIncomingRefCounted.h",
  "heap/GCIncomingRefCountedInlines.h",
  "heap/GCIncomingRefCountedSet.h",
  "heap/GCLogging.h",
  "heap/GCMemoryOperations.h",
  "heap/GCOwnedDataScope.h",
  "heap/GCRequest.h",
  "heap/GCSegmentedArray.h",
  "heap/Handle.h",
  "heap/HandleBlock.h",
  "heap/HandleForward.h",
  "heap/HandleSet.h",
  "heap/HandleTypes.h",
  "heap/Heap.h",
  "heap/HeapAnalyzer.h",
  "heap/HeapCell.h",
  "heap/HeapCellInlines.h",
  "heap/HeapCellType.h",
  "heap/HeapFinalizerCallback.h",
  "heap/HeapInlines.h",
  "heap/HeapObserver.h",
  "heap/HeapSnapshotBuilder.h",
  "heap/HeapSubspaceTypes.h",
  "heap/IncrementalSweeper.h",
  "heap/IsoCellSet.h",
  "heap/IsoHeapCellType.h",
  "heap/IsoInlinedHeapCellType.h",
  "heap/IsoInlinedHeapCellTypeInlines.h",
  "heap/IsoMemoryAllocatorBase.h",
  "heap/IsoSubspace.h",
  "heap/IsoSubspaceInlines.h",
  "heap/IsoSubspacePerVM.h",
  "heap/LocalAllocator.h",
  "heap/LocalAllocatorInlines.h",
  "heap/MachineStackMarker.h",
  "heap/MarkStack.h",
  "heap/MarkedBlock.h",
  "heap/MarkedBlockInlines.h",
  "heap/MarkedBlockSet.h",
  "heap/MarkedSpace.h",
  "heap/MarkingConstraint.h",
  "heap/MarkingConstraintExecutorPair.h",
  "heap/MutatorState.h",
  "heap/PackedCellPtr.h",
  "heap/PreciseAllocation.h",
  "heap/RegisterState.h",
  "heap/RootMarkReason.h",
  "heap/RunningScope.h",
  "heap/SimpleMarkingConstraint.h",
  "heap/SlotVisitor.h",
  "heap/SlotVisitorInlines.h",
  "heap/SlotVisitorMacros.h",
  "heap/Strong.h",
  "heap/StrongForward.h",
  "heap/StrongInlines.h",
  "heap/StructureAlignedMemoryAllocator.h",
  "heap/Subspace.h",
  "heap/SubspaceInlines.h",
  "heap/Synchronousness.h",
  "heap/TinyBloomFilter.h",
  "heap/VerifierSlotVisitor.h",
  "heap/VisitRaceKey.h",
  "heap/Weak.h",
  "heap/WeakBlock.h",
  "heap/WeakHandleOwner.h",
  "heap/WeakImpl.h",
  "heap/WeakInlines.h",
  "heap/WeakSet.h",
  "heap/WeakSetInlines.h",
  "inspector/AsyncStackTrace.h",
  "inspector/ConsoleMessage.h",
  "inspector/ContentSearchUtilities.h",
  "inspector/IdentifiersFactory.h",
  "inspector/InjectedScript.h",
  "inspector/InjectedScriptBase.h",
  "inspector/InjectedScriptHost.h",
  "inspector/InjectedScriptManager.h",
  "inspector/InjectedScriptModule.h",
  "inspector/InspectorAgentBase.h",
  "inspector/InspectorAgentRegistry.h",
  "inspector/InspectorBackendDispatcher.h",
  "inspector/InspectorEnvironment.h",
  "inspector/InspectorFrontendChannel.h",
  "inspector/InspectorFrontendRouter.h",
  "inspector/InspectorProtocolTypes.h",
  "inspector/InspectorTarget.h",
  "inspector/PerGlobalObjectWrapperWorld.h",
  "inspector/ScriptArguments.h",
  "inspector/ScriptCallFrame.h",
  "inspector/ScriptCallStack.h",
  "inspector/ScriptCallStackFactory.h",
  "inspector/ScriptFunctionCall.h",
  "inspector/agents/InspectorAgent.h",
  "inspector/agents/InspectorAuditAgent.h",
  "inspector/agents/InspectorConsoleAgent.h",
  "inspector/agents/InspectorDebuggerAgent.h",
  "inspector/agents/InspectorHeapAgent.h",
  "inspector/agents/InspectorRuntimeAgent.h",
  "inspector/agents/InspectorScriptProfilerAgent.h",
  "inspector/agents/InspectorTargetAgent.h",
  "inspector/augmentable/AugmentableInspectorControllerClient.h",
  "inspector/remote/RemoteAutomationTarget.h",
  "inspector/remote/RemoteControllableTarget.h",
  "inspector/remote/RemoteInspectionTarget.h",
  "inspector/remote/RemoteInspector.h",
  "interpreter/CLoopStack.h",
  "interpreter/CallFrame.h",
  "interpreter/CallFrameInlines.h",
  "interpreter/CalleeBits.h",
  "interpreter/EntryFrame.h",
  "interpreter/FrameTracers.h",
  "interpreter/Interpreter.h",
  "interpreter/Register.h",
  "interpreter/RegisterInlines.h",
  "interpreter/ShadowChicken.h",
  "interpreter/StackVisitor.h",
  "interpreter/VMEntryRecord.h",
  "jit/AssemblyHelpers.h",
  "jit/AssemblyHelpersSpoolers.h",
  "jit/BaselineJITCode.h",
  "jit/BaselineJITRegisters.h",
  "jit/CallFrameShuffleData.h",
  "jit/CCallHelpers.h",
  "jit/ExecutableAllocator.h",
  "jit/ExecutableMemoryHandle.h",
  "jit/FPRInfo.h",
  "jit/GCAwareJITStubRoutine.h",
  "jit/GPRInfo.h",
  "jit/JITAllocator.h",
  "jit/JITCode.h",
  "jit/JITCodeMap.h",
  "jit/JITCompilation.h",
  "jit/JITCompilationEffort.h",
  "jit/JITCompilationMode.h",
  "jit/JITMathICForwards.h",
  "jit/JITOperations.h",
  "jit/JITStubRoutine.h",
  "jit/JITThunks.h",
  "jit/OperationResult.h",
  "jit/PCToCodeOriginMap.h",
  "jit/PolymorphicCallStubRoutine.h",
  "jit/Reg.h",
  "jit/RegisterAtOffset.h",
  "jit/RegisterAtOffsetList.h",
  "jit/RegisterMap.h",
  "jit/RegisterSet.h",
  "jit/SIMDInfo.h",
  "jit/SIMDShuffle.h",
  "jit/ScratchRegisterAllocator.h",
  "jit/Snippet.h",
  "jit/SnippetParams.h",
  "jit/SnippetReg.h",
  "jit/SnippetSlowPathCalls.h",
  "jit/SpillRegistersMode.h",
  "jit/TagRegistersMode.h",
  "jit/ThunkGenerator.h",
  "jit/Width.h",
  "llint/LLIntOpcode.h",
  "llint/LLIntThunks.h",
  "parser/Lexer.h",
  "parser/ParserArena.h",
  "parser/ParserError.h",
  "parser/ParserModes.h",
  "parser/ParserTokens.h",
  "parser/ResultType.h",
  "parser/SourceCode.h",
  "parser/SourceProvider.h",
  "parser/SourceProviderCache.h",
  "parser/SourceProviderCacheItem.h",
  "parser/SourceTaintedOrigin.h",
  "parser/UnlinkedSourceCode.h",
  "parser/VariableEnvironment.h",
  "profiler/ProfilerBytecode.h",
  "profiler/ProfilerBytecodeSequence.h",
  "profiler/ProfilerBytecodes.h",
  "profiler/ProfilerCompilation.h",
  "profiler/ProfilerCompilationKind.h",
  "profiler/ProfilerCompiledBytecode.h",
  "profiler/ProfilerDatabase.h",
  "profiler/ProfilerDumper.h",
  "profiler/ProfilerEvent.h",
  "profiler/ProfilerExecutionCounter.h",
  "profiler/ProfilerJettisonReason.h",
  "profiler/ProfilerOSRExit.h",
  "profiler/ProfilerOSRExitSite.h",
  "profiler/ProfilerOrigin.h",
  "profiler/ProfilerOriginStack.h",
  "profiler/ProfilerProfiledBytecodes.h",
  "profiler/ProfilerUID.h",
  "runtime/AbstractModuleRecord.h",
  "runtime/ArgList.h",
  "runtime/ArgumentsMode.h",
  "runtime/ArityCheckMode.h",
  "runtime/ArrayConstructor.h",
  "runtime/ArrayBuffer.h",
  "runtime/ArrayBufferSharingMode.h",
  "runtime/ArrayBufferView.h",
  "runtime/ArrayConventions.h",
  "runtime/ArrayPrototype.h",
  "runtime/ArrayStorage.h",
  "runtime/ArrayStorageInlines.h",
  "runtime/AssertInvariants.h",
  "runtime/AsyncIteratorPrototype.h",
  "runtime/AuxiliaryBarrier.h",
  "runtime/AuxiliaryBarrierInlines.h",
  "runtime/BasicBlockLocation.h",
  "runtime/BatchedTransitionOptimizer.h",
  "runtime/BigInt64Array.h",
  "runtime/BigIntObject.h",
  "runtime/BigIntPrototype.h",
  "runtime/BigUint64Array.h",
  "runtime/BooleanObject.h",
  "runtime/BooleanPrototype.h",
  "runtime/BrandedStructure.h",
  "runtime/BufferMemoryHandle.h",
  "runtime/Butterfly.h",
  "runtime/ButterflyInlines.h",
  "runtime/BytecodeCacheError.h",
  "runtime/CachePayload.h",
  "runtime/CacheUpdate.h",
  "runtime/CacheableIdentifier.h",
  "runtime/CacheableIdentifierInlines.h",
  "runtime/CachedBytecode.h",
  "runtime/CachedTypes.h",
  "runtime/CagedBarrierPtr.h",
  "runtime/CallData.h",
  "runtime/CatchScope.h",
  "runtime/CellSize.h",
  "runtime/ClassInfo.h",
  "runtime/ClonedArguments.h",
  "runtime/CodeSpecializationKind.h",
  "runtime/CommonIdentifiers.h",
  "runtime/CompilationResult.h",
  "runtime/Completion.h",
  "runtime/Concurrency.h",
  "runtime/ConcurrentJSLock.h",
  "runtime/ConfigFile.h",
  "runtime/ConsoleClient.h",
  "runtime/ConsoleTypes.h",
  "runtime/ConstantMode.h",
  "runtime/ConstructAbility.h",
  "runtime/ConstructData.h",
  "runtime/ConstructorKind.h",
  "runtime/ControlFlowProfiler.h",
  "runtime/CustomGetterSetter.h",
  "runtime/DOMAnnotation.h",
  "runtime/DOMAttributeGetterSetter.h",
  "runtime/DataView.h",
  "runtime/DateInstance.h",
  "runtime/DateInstanceCache.h",
  "runtime/DeferTermination.h",
  "runtime/DeferredWorkTimer.h",
  "runtime/DefinePropertyAttributes.h",
  "runtime/DeletePropertySlot.h",
  "runtime/DirectArguments.h",
  "runtime/DirectArgumentsOffset.h",
  "runtime/DirectEvalExecutable.h",
  "runtime/DisallowScope.h",
  "runtime/DisallowVMEntry.h",
  "runtime/DumpContext.h",
  "runtime/ECMAMode.h",
  "runtime/EnsureStillAliveHere.h",
  "runtime/EnumerationMode.h",
  "runtime/Error.h",
  "runtime/ErrorHandlingScope.h",
  "runtime/ErrorInstance.h",
  "runtime/ErrorPrototype.h",
  "runtime/ErrorType.h",
  "runtime/EvalExecutable.h",
  "runtime/Exception.h",
  "runtime/ExceptionEventLocation.h",
  "runtime/ExceptionExpectation.h",
  "runtime/ExceptionHelpers.h",
  "runtime/ExceptionScope.h",
  "runtime/ExecutableBase.h",
  "runtime/ExecutableBaseInlines.h",
  "runtime/Float32Array.h",
  "runtime/Float64Array.h",
  "runtime/Forward.h",
  "runtime/FunctionConstructor.h",
  "runtime/FunctionExecutable.h",
  "runtime/FunctionHasExecutedCache.h",
  "runtime/FunctionPrototype.h",
  "runtime/FunctionRareData.h",
  "runtime/FuzzerAgent.h",
  "runtime/Gate.h",
  "runtime/GenericArguments.h",
  "runtime/GenericOffset.h",
  "runtime/GenericTypedArrayView.h",
  "runtime/GenericTypedArrayViewInlines.h",
  "runtime/GetPutInfo.h",
  "runtime/GetterSetter.h",
  "runtime/GetVM.h",
  "runtime/GlobalExecutable.h",
  "runtime/GlobalObjectMethodTable.h",
  "runtime/HashMapImpl.h",
  "runtime/HashMapImplInlines.h",
  "runtime/Identifier.h",
  "runtime/IdentifierInlines.h",
  "runtime/ImplementationVisibility.h",
  "runtime/ImportMap.h",
  "runtime/IndexingHeader.h",
  "runtime/IndexingHeaderInlines.h",
  "runtime/IndexingType.h",
  "runtime/InferredValue.h",
  "runtime/InitializeThreading.h",
  "runtime/InlineAttribute.h",
  "runtime/Int16Array.h",
  "runtime/Int32Array.h",
  "runtime/Int8Array.h",
  "runtime/InternalFunction.h",
  "runtime/Intrinsic.h",
  "runtime/IterationKind.h",
  "runtime/IteratorOperations.h",
  "runtime/IteratorPrototype.h",
  "runtime/JSArray.h",
  "runtime/JSArrayInlines.h",
  "runtime/JSArrayBuffer.h",
  "runtime/JSArrayBufferPrototype.h",
  "runtime/JSArrayBufferView.h",
  "runtime/JSArrayBufferViewInlines.h",
  "runtime/JSArrayIterator.h",
  "runtime/JSBigInt.h",
  "runtime/JSBoundFunction.h",
  "runtime/JSCBytecodeCacheVersion.h",
  "runtime/JSCConfig.h",
  "runtime/JSCInlines.h",
  "runtime/JSCJSValue.h",
  "runtime/JSCJSValueInlines.h",
  "runtime/JSCPtrTag.h",
  "runtime/JSCallee.h",
  "runtime/JSCalleeInlines.h",
  "runtime/JSCast.h",
  "runtime/JSCell.h",
  "runtime/JSCellInlines.h",
  "runtime/JSCustomGetterFunction.h",
  "runtime/JSCustomSetterFunction.h",
  "runtime/JSDataView.h",
  "runtime/JSDateMath.h",
  "runtime/JSDestructibleObject.h",
  "runtime/JSDestructibleObjectHeapCellType.h",
  "runtime/JSExportMacros.h",
  "runtime/JSFunction.h",
  "runtime/JSFunctionInlines.h",
  "runtime/JSGenerator.h",
  "runtime/JSGenericTypedArrayView.h",
  "runtime/JSGenericTypedArrayViewInlines.h",
  "runtime/JSGenericTypedArrayViewPrototype.h",
  "runtime/JSGenericTypedArrayViewPrototypeInlines.h",
  "runtime/JSGlobalLexicalEnvironment.h",
  "runtime/JSGlobalObject.h",
  "runtime/JSGlobalObjectFunctions.h",
  "runtime/JSGlobalObjectInlines.h",
  "runtime/JSGlobalProxy.h",
  "runtime/JSGlobalProxyInlines.h",
  "runtime/JSImmutableButterfly.h",
  "runtime/JSInternalFieldObjectImpl.h",
  "runtime/JSInternalPromise.h",
  "runtime/JSLexicalEnvironment.h",
  "runtime/JSLock.h",
  "runtime/JSMap.h",
  "runtime/JSMapInlines.h",
  "runtime/JSMapIterator.h",
  "runtime/JSMicrotask.h",
  "runtime/JSModuleLoader.h",
  "runtime/JSModuleRecord.h",
  "runtime/JSNativeStdFunction.h",
  "runtime/JSONAtomStringCache.h",
  "runtime/JSONObject.h",
  "runtime/JSObject.h",
  "runtime/JSObjectInlines.h",
  "runtime/JSPromise.h",
  "runtime/JSPromiseConstructor.h",
  "runtime/JSPropertyNameEnumerator.h",
  "runtime/JSRemoteFunction.h",
  "runtime/JSRunLoopTimer.h",
  "runtime/JSScope.h",
  "runtime/JSScriptFetchParameters.h",
  "runtime/JSScriptFetcher.h",
  "runtime/JSSegmentedVariableObject.h",
  "runtime/JSSet.h",
  "runtime/JSSetInlines.h",
  "runtime/JSSetIterator.h",
  "runtime/JSSourceCode.h",
  "runtime/JSString.h",
  "runtime/JSStringInlines.h",
  "runtime/JSSymbolTableObject.h",
  "runtime/JSType.h",
  "runtime/JSTypeInfo.h",
  "runtime/JSTypedArrays.h",
  "runtime/JSWeakMap.h",
  "runtime/JSWeakMapInlines.h",
  "runtime/JSWithScope.h",
  "runtime/JSWrapperObject.h",
  "runtime/KeyAtomStringCache.h",
  "runtime/KeyAtomStringCacheInlines.h",
  "runtime/LazyClassStructure.h",
  "runtime/LazyProperty.h",
  "runtime/LeafExecutable.h",
  "runtime/Lookup.h",
  "runtime/MapConstructor.h",
  "runtime/MatchResult.h",
  "runtime/MathCommon.h",
  "runtime/MegamorphicCache.h",
  "runtime/MemoryMode.h",
  "runtime/MemoryStatistics.h",
  "runtime/Microtask.h",
  "runtime/ModuleProgramExecutable.h",
  "runtime/NativeCallee.h",
  "runtime/NativeExecutable.h",
  "runtime/NativeFunction.h",
  "runtime/NullGetterFunction.h",
  "runtime/NullSetterFunction.h",
  "runtime/NumberObject.h",
  "runtime/NumberPrototype.h",
  "runtime/NumericStrings.h",
  "runtime/ObjectConstructor.h",
  "runtime/ObjectInitializationScope.h",
  "runtime/ObjectPrototype.h",
  "runtime/Operations.h",
  "runtime/Options.h",
  "runtime/OptionsList.h",
  "runtime/PageCount.h",
  "runtime/ParseInt.h",
  "runtime/PrivateFieldPutKind.h",
  "runtime/PrivateName.h",
  "runtime/ProgramExecutable.h",
  "runtime/PropertyDescriptor.h",
  "runtime/PropertyName.h",
  "runtime/PropertyNameArray.h",
  "runtime/PropertyOffset.h",
  "runtime/PropertySlot.h",
  "runtime/PropertyStorage.h",
  "runtime/PropertyTable.h",
  "runtime/Protect.h",
  "runtime/PrototypeKey.h",
  "runtime/ProxyObject.h",
  "runtime/PureNaN.h",
  "runtime/PutDirectIndexMode.h",
  "runtime/PutPropertySlot.h",
  "runtime/RegExp.h",
  "runtime/RegExpCachedResult.h",
  "runtime/RegExpGlobalData.h",
  "runtime/RegExpKey.h",
  "runtime/RegExpObject.h",
  "runtime/RegExpStringIteratorPrototype.h",
  "runtime/ResourceExhaustion.h",
  "runtime/RuntimeFlags.h",
  "runtime/RuntimeType.h",
  "runtime/SamplingProfiler.h",
  "runtime/ScopeOffset.h",
  "runtime/ScopedArguments.h",
  "runtime/ScopedArgumentsTable.h",
  "runtime/Scribble.h",
  "runtime/ScriptExecutable.h",
  "runtime/ScriptExecutableInlines.h",
  "runtime/ScriptFetchParameters.h",
  "runtime/ScriptFetcher.h",
  "runtime/ShadowRealmObject.h",
  "runtime/SideDataRepository.h",
  "runtime/SlowPathFunction.h",
  "runtime/SmallStrings.h",
  "runtime/SourceOrigin.h",
  "runtime/SparseArrayValueMap.h",
  "runtime/StableSort.h",
  "runtime/StackAlignment.h",
  "runtime/StackFrame.h",
  "runtime/StringObject.h",
  "runtime/StringPrototype.h",
  "runtime/StringReplaceCache.h",
  "runtime/StringSplitCache.h",
  "runtime/Structure.h",
  "runtime/StructureCache.h",
  "runtime/StructureChain.h",
  "runtime/StructureID.h",
  "runtime/StructureInlines.h",
  "runtime/StructureRareData.h",
  "runtime/StructureRareDataInlines.h",
  "runtime/StructureTransitionTable.h",
  "runtime/SubspaceAccess.h",
  "runtime/Symbol.h",
  "runtime/SymbolPrototype.h",
  "runtime/SymbolTable.h",
  "runtime/SymbolTableOrScopeDepth.h",
  "runtime/SyntheticModuleRecord.h",
  "runtime/TemplateObjectDescriptor.h",
  "runtime/TemporalNow.h",
  "runtime/TemporalObject.h",
  "runtime/TestRunnerUtils.h",
  "runtime/ThrowScope.h",
  "runtime/ToNativeFromValue.h",
  "runtime/TypeError.h",
  "runtime/TypeInfoBlob.h",
  "runtime/TypeSet.h",
  "runtime/TypedArrayAdaptersForwardDeclarations.h",
  "runtime/TypedArrayAdaptors.h",
  "runtime/TypedArrayController.h",
  "runtime/TypedArrayInlines.h",
  "runtime/TypedArrayType.h",
  "runtime/TypedArrays.h",
  "runtime/TypeofType.h",
  "runtime/UGPRPair.h",
  "runtime/Uint16Array.h",
  "runtime/Uint32Array.h",
  "runtime/Uint8Array.h",
  "runtime/Uint8ClampedArray.h",
  "runtime/VM.h",
  "runtime/VMEntryScope.h",
  "runtime/VMEntryScopeInlines.h",
  "runtime/VMInlines.h",
  "runtime/VMTraps.h",
  "runtime/VMTrapsInlines.h",
  "runtime/VarOffset.h",
  "runtime/Watchdog.h",
  "runtime/WeakGCHashTable.h",
  "runtime/WeakGCMap.h",
  "runtime/WeakGCMapInlines.h",
  "runtime/WeakGCSet.h",
  "runtime/WeakGCSetInlines.h",
  "runtime/WriteBarrier.h",
  "runtime/WriteBarrierInlines.h",
  "tools/Integrity.h",
  "tools/IntegrityInlines.h",
  "tools/VMInspector.h",
  "tools/VMInspectorInlines.h",
  "wasm/WasmBranchHints.h",
  "wasm/WasmCallee.h",
  "wasm/WasmCalleeGroup.h",
  "wasm/WasmCallsiteCollection.h",
  "wasm/WasmCapabilities.h",
  "wasm/WasmCompilationContext.h",
  "wasm/WasmCompilationMode.h",
  "wasm/WasmContext.h",
  "wasm/WasmCreationMode.h",
  "wasm/WasmExceptionType.h",
  "wasm/WasmFaultSignalHandler.h",
  "wasm/WasmFormat.h",
  "wasm/WasmFunctionCodeBlockGenerator.h",
  "wasm/WasmFunctionIPIntMetadataGenerator.h",
  "wasm/WasmHandlerInfo.h",
  "wasm/WasmIPIntTierUpCounter.h",
  "wasm/WasmIPIntGenerator.h",
  "wasm/WasmIndexOrName.h",
  "wasm/WasmJS.h",
  "wasm/WasmLLIntBuiltin.h",
  "wasm/WasmLLIntTierUpCounter.h",
  "wasm/WasmMemory.h",
  "wasm/WasmMemoryInformation.h",
  "wasm/WasmModule.h",
  "wasm/WasmModuleInformation.h",
  "wasm/WasmName.h",
  "wasm/WasmNameSection.h",
  "wasm/WasmOSREntryData.h",
  "wasm/WasmSIMDOpcodes.h",
  "wasm/WasmSections.h",
  "wasm/WasmTypeDefinition.h",
  "wasm/WasmStreamingCompiler.h",
  "wasm/WasmStreamingParser.h",
  "wasm/WasmTierUpCount.h",
  "wasm/WasmValueLocation.h",
  "wasm/js/JSWebAssembly.h",
  "wasm/js/JSWebAssemblyMemory.h",
  "wasm/js/JSWebAssemblyModule.h",
  "wasm/js/WebAssemblyModuleRecord.h",
  "yarr/RegularExpression.h",
  "yarr/Yarr.h",
  "yarr/YarrErrorCode.h",
  "yarr/YarrFlags.h",
  "yarr/YarrInterpreter.h",
  "yarr/YarrJIT.h",
  "yarr/YarrMatchingContextHolder.h",
  "yarr/YarrParser.h",
  "yarr/YarrPattern.h",
  "yarr/YarrUnicodeProperties.h",
]

if (use_inspector_socket_server) {
  jsc_private_framework_headers += [ "API/JSRemoteInspectorServer.h" ]
}

jsc_builtin_scripts = [
  "//Source/JavaScriptCore/Scripts/wkbuiltins/wkbuiltins.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generator.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_model.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_templates.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_combined_header.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_combined_implementation.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_separate_header.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_separate_implementation.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_wrapper_header.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_wrapper_implementation.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_internals_wrapper_header.py",
  "//Source/JavaScriptCore/Scripts/wkbuiltins/builtins_generate_internals_wrapper_implementation.py",
  "//Source/JavaScriptCore/Scripts/lazywriter.py",
]
