jsc_object_lut_sources = [
  "runtime/ArrayConstructor.cpp",
  "runtime/AsyncFromSyncIteratorPrototype.cpp",
  "runtime/AsyncGeneratorPrototype.cpp",
  "runtime/BigIntConstructor.cpp",
  "runtime/BigIntPrototype.cpp",
  "runtime/BooleanPrototype.cpp",
  "runtime/DateConstructor.cpp",
  "runtime/DatePrototype.cpp",
  "runtime/ErrorPrototype.cpp",
  "runtime/GeneratorPrototype.cpp",
  "runtime/IntlCollatorConstructor.cpp",
  "runtime/IntlCollatorPrototype.cpp",
  "runtime/IntlDateTimeFormatConstructor.cpp",
  "runtime/IntlDateTimeFormatPrototype.cpp",
  "runtime/IntlDisplayNamesConstructor.cpp",
  "runtime/IntlDisplayNamesPrototype.cpp",
  "runtime/IntlDurationFormatConstructor.cpp",
  "runtime/IntlDurationFormatPrototype.cpp",
  "runtime/IntlListFormatConstructor.cpp",
  "runtime/IntlListFormatPrototype.cpp",
  "runtime/IntlLocalePrototype.cpp",
  "runtime/IntlNumberFormatConstructor.cpp",
  "runtime/IntlNumberFormatPrototype.cpp",
  "runtime/IntlObject.cpp",
  "runtime/IntlPluralRulesConstructor.cpp",
  "runtime/IntlPluralRulesPrototype.cpp",
  "runtime/IntlRelativeTimeFormatConstructor.cpp",
  "runtime/IntlRelativeTimeFormatPrototype.cpp",
  "runtime/IntlSegmentIteratorPrototype.cpp",
  "runtime/IntlSegmenterConstructor.cpp",
  "runtime/IntlSegmenterPrototype.cpp",
  "runtime/IntlSegmentsPrototype.cpp",
  "runtime/JSDataViewPrototype.cpp",
  "runtime/JSGlobalObject.cpp",
  "runtime/JSInternalPromiseConstructor.cpp",
  "runtime/JSONObject.cpp",
  "runtime/JSPromiseConstructor.cpp",
  "runtime/JSPromisePrototype.cpp",
  "runtime/MapConstructor.cpp",
  "runtime/MapPrototype.cpp",
  "runtime/NumberConstructor.cpp",
  "runtime/NumberPrototype.cpp",
  "runtime/ObjectConstructor.cpp",
  "runtime/ReflectObject.cpp",
  "runtime/RegExpConstructor.cpp",
  "runtime/RegExpPrototype.cpp",
  "runtime/RegExpStringIteratorPrototype.cpp",
  "runtime/SetPrototype.cpp",
  "runtime/ShadowRealmObject.cpp",
  "runtime/ShadowRealmPrototype.cpp",
  "runtime/StringConstructor.cpp",
  "runtime/StringPrototype.cpp",
  "runtime/SymbolConstructor.cpp",
  "runtime/SymbolPrototype.cpp",
  "runtime/TemporalCalendarConstructor.cpp",
  "runtime/TemporalCalendarPrototype.cpp",
  "runtime/TemporalDurationConstructor.cpp",
  "runtime/TemporalDurationPrototype.cpp",
  "runtime/TemporalInstantConstructor.cpp",
  "runtime/TemporalInstantPrototype.cpp",
  "runtime/TemporalNow.cpp",
  "runtime/TemporalObject.cpp",
  "runtime/TemporalPlainDateConstructor.cpp",
  "runtime/TemporalPlainDatePrototype.cpp",
  "runtime/TemporalPlainDateTimeConstructor.cpp",
  "runtime/TemporalPlainDateTimePrototype.cpp",
  "runtime/TemporalPlainTimeConstructor.cpp",
  "runtime/TemporalPlainTimePrototype.cpp",
  "runtime/TemporalTimeZoneConstructor.cpp",
  "runtime/TemporalTimeZonePrototype.cpp",
  "wasm/js/JSWebAssembly.cpp",
  "wasm/js/WebAssemblyArrayConstructor.cpp",
  "wasm/js/WebAssemblyArrayPrototype.cpp",
  "wasm/js/WebAssemblyCompileErrorConstructor.cpp",
  "wasm/js/WebAssemblyCompileErrorPrototype.cpp",
  "wasm/js/WebAssemblyExceptionConstructor.cpp",
  "wasm/js/WebAssemblyExceptionPrototype.cpp",
  "wasm/js/WebAssemblyGlobalConstructor.cpp",
  "wasm/js/WebAssemblyGlobalPrototype.cpp",
  "wasm/js/WebAssemblyInstanceConstructor.cpp",
  "wasm/js/WebAssemblyInstancePrototype.cpp",
  "wasm/js/WebAssemblyLinkErrorConstructor.cpp",
  "wasm/js/WebAssemblyLinkErrorPrototype.cpp",
  "wasm/js/WebAssemblyMemoryConstructor.cpp",
  "wasm/js/WebAssemblyMemoryPrototype.cpp",
  "wasm/js/WebAssemblyModuleConstructor.cpp",
  "wasm/js/WebAssemblyModulePrototype.cpp",
  "wasm/js/WebAssemblyRuntimeErrorConstructor.cpp",
  "wasm/js/WebAssemblyRuntimeErrorPrototype.cpp",
  "wasm/js/WebAssemblyStructConstructor.cpp",
  "wasm/js/WebAssemblyStructPrototype.cpp",
  "wasm/js/WebAssemblyTableConstructor.cpp",
  "wasm/js/WebAssemblyTablePrototype.cpp",
  "wasm/js/WebAssemblyTagConstructor.cpp",
  "wasm/js/WebAssemblyTagPrototype.cpp",
]
