import("//build/config/webkit_features.gni")

offline_asm_backend = ""

if (is_win) {
  if (target_cpu == "x64") {
    offline_asm_backend = "X86_64_WIN"
  }

  if (!enable_jit && enable_c_loop) {
    offline_asm_backend = "C_LOOP_WIN"
  }
} else {
  if (target_cpu == "x64") {
    offline_asm_backend = "X86_64"
  } else if (target_cpu == "arm64") {
    offline_asm_backend = "ARM64"
  } else if (target_cpu == "armv7") {
    offline_asm_backend = "ARMv7"
  } else if (target_cpu == "riscv64") {
    offline_asm_backend = "RISCV64"
  }

  if (!enable_jit && enable_c_loop) {
    offline_asm_backend = "C_LOOP"
  }
}


offline_asm = [
  "offlineasm/arm.rb",
  "offlineasm/arm64.rb",
  "offlineasm/arm64e.rb",
  "offlineasm/asm.rb",
  "offlineasm/ast.rb",
  "offlineasm/backends.rb",
  "offlineasm/cloop.rb",
  "offlineasm/config.rb",
  "offlineasm/instructions.rb",
  "offlineasm/offsets.rb",
  "offlineasm/opt.rb",
  "offlineasm/parser.rb",
  "offlineasm/registers.rb",
  "offlineasm/risc.rb",
  "offlineasm/riscv64.rb",
  "offlineasm/self_hash.rb",
  "offlineasm/settings.rb",
  "offlineasm/transform.rb",
  "offlineasm/x86.rb",
  "offlineasm/generate_settings_extractor.rb",
]
